--- a/javascript/testem/test/index.mustache
+++ b/javascript/testem/test/index.mustache
@@ -2,14 +2,14 @@
 <html>
   <head>
     <title>Test'em</title>
-    <link rel="stylesheet" href="/testem/mocha.css">
-    <script src="/testem/mocha.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/mocha/2.3.4/mocha.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/mocha/2.3.4/mocha.js"></script>
+    <script src="/node_modules/power-assert/build/power-assert.js"></script>
     <script src="/testem.js"></script>
 
     <script>mocha.setup('bdd')</script>
 
-    <script src="/bower_components/chai/chai.js"></script>
-    <script src="/bower_components/requirejs/require.js"></script>
+    <script src="/node_modules/requirejs/require.js"></script>
     {{#styles}}<link rel="stylesheet" href="{{.}}">{{/styles}}
   </head>
   <body>
