--- a/javascript/testem/test/index.mustache
+++ b/javascript/testem/test/index.mustache
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/mocha/2.3.4/mocha.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/mocha/2.3.4/mocha.js"></script>
     <script src="/node_modules/power-assert/build/power-assert.js"></script>
+    <script src="/node_modules/requirejs/require.js"></script>
     <script src="/testem.js"></script>
 
     <script>mocha.setup('bdd')</script>
