--- a/javascript/three.js/src/style.scss
+++ b/javascript/three.js/src/style.scss
@@ -6,3 +6,7 @@ pre {
   color: #dedede;
   text-shadow: 0 1px 1px rgba(#000, .5);
 }
+
+pre {
+  background: $bluegrey url('code.png') no-repeat center center / 32px 32px;
+}
